src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Advertising__c</fullName>
        <label>Advertising</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>In Print</fullName>
                </value>
                <value>
                <fullName>Online</fullName>
                </value>
                <value>
                <fullName>TV</fullName>
                </value>
                <value>
                <fullName>None</fullName>
                </value>
                <value>
                <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Role__c</fullName>
        <label>Agency Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Online Campaign Manager</fullName>
                </value>
                <value>
                <fullName>Online Sales Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>England</fullName>
                </value>
                <value>
                <fullName>Scotland</fullName>
                </value>
                <value>
                <fullName>Wales</fullName>
                </value>
                <value>
                <fullName>Northern Ireland</fullName>
                </value>
                <value>
                <fullName>Republic of Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_Duration__c</fullName>
        <description>Duration that specified contact should remain on the comp list.</description>
        <formula>(YEAR(Comp_End_Date__c)  -  YEAR(Comp_Start_Date__c))*12 +  (MONTH(Comp_End_Date__c)  -  MONTH(Comp_Start_Date__c)) + ((DAY(Comp_End_Date__c)  -  DAY(Comp_Start_Date__c)) / 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Months)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_End_Date__c</fullName>
        <description>Date that specified contact should be removed from the comp list.</description>
        <label>Comp End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comp_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Add the specified contact to the comp list.</description>
        <inlineHelpText>Would you like to add the specified contact to the comp list?</inlineHelpText>
        <label>Comp List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Specified start date to add the contact to the comp list.</description>
        <inlineHelpText>What date would you like the contact to be added to the comp list?</inlineHelpText>
        <label>Comp Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Detail_Status__c</fullName>
        <formula>IF(
OR
(
Email=&quot;&quot; ,
Phone=&quot;&quot; ,
MobilePhone=&quot;&quot;
)
,
IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Phone or email information is missing&quot;)
,
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Contact information is complete&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Detail Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executor_Name__c</fullName>
        <label>Executor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Male</fullName>
                </value>
                <value>
                <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobbies_Interests__c</fullName>
        <label>Hobbies &amp; Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Sport</fullName>
                </value>
                <value>
                <fullName>Food</fullName>
                </value>
                <value>
                <fullName>Travel/Investments</fullName>
                </value>
                <value>
                <fullName>Health &amp; Fitness</fullName>
                </value>
                <value>
                <fullName>Motoring</fullName>
                </value>
                <value>
                <fullName>Gardening</fullName>
                </value>
                <value>
                <fullName>The Arts</fullName>
                </value>
                <value>
                <fullName>DIY</fullName>
                </value>
                <value>
                <fullName>Music</fullName>
                </value>
                <value>
                <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IF_WAC_Do_Not_Call__c</fullName>
        <description>Used in outbound WAC interface. Transalates do not call flag into correct way around for WAC</description>
        <formula>IF( DoNotCall=True,&quot;N&quot;,&quot;Y&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Do_Not_Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Do_Not_Email_TDT__c</fullName>
        <description>Uses has opted out field to indicate TDT mail preference. Logic switched to fit with WAC</description>
        <formula>IF( HasOptedOutOfEmail = True,&quot;N&quot;,&quot;Y&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Do_Not_Email_TDT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Do_Not_Email_TP__c</fullName>
        <description>WAC field for third party emails based on third party field. If true then can send third party marketing.</description>
        <formula>IF( X3rd_Party_Email_Offers__c = TRUE, &quot;Y&quot;,&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Do_Not_Email_TP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Do_Not_Email__c</fullName>
        <description>Used in outbound WAC interface to indicate email preferences, logic is switched around.</description>
        <formula>IF( HasOptedOutOfEmail =True, &quot;N&quot;,&quot;Y&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Do_Not_Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Do_Not_Mail__c</fullName>
        <description>Used in the outbound interface to WAC. Reverses the logic of the do not mail flag and uses Y and N</description>
        <formula>IF( Do_Not_Mail__c = TRUE,&quot;N&quot;,&quot;Y&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Do_Not_Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_First_Addr__c</fullName>
        <formula>SUBSTITUTE( MailingStreet ,BR(),&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_First_Addr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Initial__c</fullName>
        <description>Used by WAC interface to create initial of subscriber</description>
        <formula>MID(FirstName,1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Initial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_TP_EMAIL__c</fullName>
        <formula>IF( X3rd_Party_Email_Offers__c = TRUE, &quot;Y&quot;,&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_TP_EMAIL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Details__c</fullName>
        <label>IM Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_del__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_Do_Not_Mail__c</fullName>
        <description>Used to switch the values of the do not mail fields around for the Marketing Improvements Interface</description>
        <formula>IF( Do_Not_Mail__c , &apos;FALSE&apos;,&apos;TRUE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MI_Do_Not_Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_EMAIL_OPT_OUT__c</fullName>
        <formula>IF(HasOptedOutOfEmail=TRUE,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MI_EMAIL_OPT_OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_TP_EMAIL__c</fullName>
        <formula>IF(X3rd_Party_Email_Offers__c=TRUE,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MI_TP_EMAIL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Phone</fullName>
                </value>
                <value>
                <fullName>Mail</fullName>
                </value>
                <value>
                <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Contact__c</fullName>
        <label>Preferred Phone Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Home</fullName>
                </value>
                <value>
                <fullName>Work</fullName>
                </value>
                <value>
                <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prompted_Interest__c</fullName>
        <label>Prompted Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Disliked Times Tabloid Format</fullName>
                </value>
                <value>
                <fullName>Disliked Independent Tabloid Format</fullName>
                </value>
                <value>
                <fullName>Competitor Offer</fullName>
                </value>
                <value>
                <fullName>Scottish Flyer</fullName>
                </value>
                <value>
                <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Rejecting_Subscription__c</fullName>
        <label>Reason For Rejecting Subscription</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Sub Duration</fullName>
                </value>
                <value>
                <fullName>Weekly Price</fullName>
                </value>
                <value>
                <fullName>Holidays</fullName>
                </value>
                <value>
                <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Contact_Name__c</fullName>
        <label>School Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Position__c</fullName>
        <label>School Contact Position</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>A</fullName>
                </value>
                <value>
                <fullName>B</fullName>
                </value>
                <value>
                <fullName>C</fullName>
                </value>
                <value>
                <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Number_Contact__c</fullName>
        <formula>Account.Subscriber_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Number Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Voucher_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Total Voucher Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Email_Offers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party Email Offers</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>Use this record type if creating an individual Subscriber</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>School</fullName>
        <active>false</active>
        <description>Use this record type if creating a school Subscriber</description>
        <label>School</label>
    </recordTypes>
    <validationRules>
        <fullName>Home_Phone_Start_Zero</fullName>
        <active>true</active>
        <description>Validates the Home Phone field to ensure it starts with zero.</description>
        <errorConditionFormula>NOT(BEGINS(HomePhone,&quot;0&quot;))</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>Home Phone number must start with zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Start_Zero</fullName>
        <active>true</active>
        <description>Validates the Mobile field to ensure it starts with zero.</description>
        <errorConditionFormula>NOT(BEGINS(MobilePhone,&quot;0&quot;))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile number must start with zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Phone_Start_Zero</fullName>
        <active>true</active>
        <description>Validates the Work Phone field to ensure it starts with zero.</description>
        <errorConditionFormula>NOT(BEGINS(Phone,&quot;0&quot;))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Work Phone number must start with zero.</errorMessage>
    </validationRules>
</CustomObject>